--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TarazismDb": "Server=.\\MSSQLSERVER2019;Database=furfalli_Tarazism;User Id=furfalli_Taraz;Password=Koonemammad96!! ;MultipleActiveResultSets=true;"
+  }
 }
