--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TarazismDb": "Server=.\\MSSQLSERVER2019;Database=furfalli_Tarazism;User Id=furfalli_Taraz;Password=Koonemammad96!!;MultipleActiveResultSets=true;"
+    "TarazismDb": "Data Source=tarazism.db"
   }
 }
